--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,7 +1,13 @@
 {
+  "AppSettings": {
+    "Token": "super secrete key"
+  },
+
   "ConnectionStrings":{
     "DefaultConnection": "Data Source=datingapp.db"
+
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +15,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  
   "AllowedHosts": "*"
 }
